refactor unit tests
add workspace unit test